Added API to get IP addresses
