# models/ip_addresses_response.go
@@ -1,0 +1,43 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/swag"
+)
+
+// IPAddressesResponse IP addresses response
+// swagger:model IPAddressesResponse
+type IPAddressesResponse struct {
+
+	// addresses
+	Addresses []string `json:"addresses"`
+}
+
+// Validate validates this IP addresses response
+func (m *IPAddressesResponse) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *IPAddressesResponse) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *IPAddressesResponse) UnmarshalBinary(b []byte) error {
+	var res IPAddressesResponse
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
