# restapi/operations/get_ip_addresses_responses.go
@@ -1,0 +1,58 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	models "github.com/baez90/go-icndb/models"
+)
+
+// GetIPAddressesOKCode is the HTTP code returned for type GetIPAddressesOK
+const GetIPAddressesOKCode int = 200
+
+/*GetIPAddressesOK Got IP addresses
+
+swagger:response getIpAddressesOK
+*/
+type GetIPAddressesOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.IPAddressesResponse `json:"body,omitempty"`
+}
+
+// NewGetIPAddressesOK creates GetIPAddressesOK with default headers values
+func NewGetIPAddressesOK() *GetIPAddressesOK {
+
+	return &GetIPAddressesOK{}
+}
+
+// WithPayload adds the payload to the get Ip addresses o k response
+func (o *GetIPAddressesOK) WithPayload(payload *models.IPAddressesResponse) *GetIPAddressesOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get Ip addresses o k response
+func (o *GetIPAddressesOK) SetPayload(payload *models.IPAddressesResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetIPAddressesOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
